# voice

./: .gitignore  LICENSE  README.md  __init__.py  audio_utils.py  config.custom.yaml  config.yaml  download.py  example_usage.py  install.bat  install.sh  pyproject.toml  requirements.txt  text_processor.py  voice_engine.py
models/: README.md  download.py
src/: audio_utils.py  cli.py  client.py  config.custom.yaml  config.yaml  kokoro_engine.py  server.py  styletts2_engine.py  timing.py  voice_engine.py
src/tts/: glados_synthesizer.py  glados_tts.py  kokoro_tts.py  phonemizer.py
src/voice/: audio_utils.py  config.yaml  voice_engine.py
src/voice/tts/: glados_synthesizer.py  glados_tts.py  kokoro_tts.py  phonemizer.py
tts/: elevenlabs_tts.py  kokoro_tts.py
voice/: cli.py  config.yaml  voice_engine.py
voice/tts/: __init__.py  glados_synthesizer.py  kokoro_tts.py  phonemizer.py  resources_glados.py
voice_tts/: audio_utils.py
voice_tts/tts/: kokoro_tts.py  phonemizer.py
