[project]
dependencies = [
  "pyyaml>=6.0",
  "torch>=2.0.0",
  "kokoro>=0.9.2",
  "soundfile>=0.12.1",
  "sounddevice>=0.4.6",
]
description = "A simple text-to-speech CLI using Kokoro with 28 English voice presets"
name = "voice"
requires-python = ">=3.9"
version = "0.1.0"

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"

[project.scripts]
voice = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["config.yaml"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]
