[project]
dependencies = [
  "pyyaml>=6.0",
  "torch>=2.0.0",
  "kokoro>=0.9.2",
  "soundfile>=0.12.1",
  "sounddevice>=0.4.6",
]
description = "A simple text-to-speech CLI using Kokoro with 28 English voice presets"
name = "voice"
requires-python = ">=3.10,<3.13"
version = "0.1.0"

[project.optional-dependencies]
all = [
  "voice[styletts2]",
]
styletts2 = [
  "torchaudio>=2.0.0",
  "munch>=2.5.0",
  "librosa>=0.10.0",
  "nltk>=3.8",
  "gruut>=2.2.3",
  "gruut-lang-en>=2.0.0",
  "accelerate>=0.20.0",
  "transformers>=4.30.0",
  "einops>=0.6.0",
  "einops-exts>=0.0.4",
  "matplotlib>=3.7.0",
  "monotonic-align @ git+https://github.com/resemble-ai/monotonic_align.git",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"

[tool.uv.sources]
torch = {index = "pytorch-cu129"}
torchaudio = {index = "pytorch-cu129"}

[project.scripts]
voice = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["config.yaml"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]
